# oop-tictactoe-xxvms

./: CMakeLists.txt
Test/: testmain.cpp
include/: Board.h  Controller.h  HumanPlayer.h
include/interface/: IPlayer.h  IRenderer.h
src/: Board.cpp  Controller.cpp  HumanPlayer.cpp
